k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: kanban
spec:
  selector:
    app: kanban-server
  ports:
    - port: 3001
      targetPort: 3001
